tests/self/at_top_level.rev
self // error: use of self outside of a structure